@@ -24,7 +24,6 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -80,7 +79,7 @@ public class OrderServiceImpl implements OrderService {
         return orderRepository.selectMyOrders(email)
                 .stream()
                 .map(this::setCarAndCustomer)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private OrderDto setCarAndCustomer(Order order) {
